--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>TIC-TAC-TOE</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
-
+  <h1>TIC-TAC-TOE</h1>
+<div id="tictactoe">
+  <div class="one">
+    <div class ="inner" id="00"></div>
+    <div class ="inner" id="01"></div>
+    <div class ="inner" id="02"></div>
+  </div>
+  <div class="two">
+    <div class ="inner" id="03"></div>
+    <div class ="inner" id="04"></div>
+    <div class ="inner" id="05"></div>
+  </div>
+  <div  class="three">
+    <div class ="inner" id="06"></div>
+    <div class ="inner" id="07"></div>
+    <div class ="inner" id="08"></div>
+  </div>
+  <div>
+    <h3 class="players">Player 1</h3>
+    <p class="players" id="playeonescore">0</p>
+  </div> 
+  <div>
+    <h3 class="players">Player 2</h3>
+    <p class="players" id="playertwoscore">0</p>
+  </div>
+  <button id="reset">Start Game</button>
+</div>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
