--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div>
     <h3 class="players">Player 1</h3>
-    <p class="players" id="playeonescore">0</p>
+    <p class="players" id="playeronescore">0</p>
   </div> 
   <div>
     <h3 class="players">Player 2</h3>
