--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <h3 class="players">Player 2</h3>
     <p class="players" id="playertwoscore">0</p>
   </div>
+  <div id="game">Let's Play!</div>
   <button id="reset">Start Game</button>
 </div>
   <script type="text/javascript" src="js/app.js"></script>
