--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>TIC-TAC-TOE</h1>
 <div id="tictactoe">
+  <div id="game">Let's Salsa!</div>
   <div class="one">
     <div class ="inner" id="00"></div>
     <div class ="inner" id="01"></div>
@@ -32,7 +33,6 @@
     <h3 class="players">Player 2</h3>
     <p class="players" id="playertwoscore">0</p>
   </div>
-  <div id="game">Let's Play!</div>
   <button id="reset">Start Game</button>
 </div>
   <script type="text/javascript" src="js/app.js"></script>
