--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>TIC-TAC-TOE</h1>
-<div id="tictactoe">
   <div id="game">Let's Salsa!</div>
+<div id="tictactoe">
   <div class="one">
     <div class ="inner" id="00"></div>
     <div class ="inner" id="01"></div>
@@ -33,7 +33,10 @@
     <h3 class="players">Player 2</h3>
     <p class="players" id="playertwoscore">0</p>
   </div>
-  <button id="reset">Start Game</button>
+  <div>
+    <aside id="turn"></aside>
+  </div>
+  <button id="reset">Reset</button>
 </div>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
