--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>TIC-TAC-TOE</h1>
-  <div id="game">Let's Salsa!</div>
+  <div id="game"><h2>Let's Salsa!</h2>
+  <h2 id="winner"></h2></div>
 <div id="tictactoe">
   <div class="one">
     <div class ="inner" id="00"></div>
